--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -32,6 +32,10 @@ jobs:
         run: hexo clean
       - name: Build
         run: hexo build
+      - name: ls
+        run: ls
+      - name: pwd
+        run: pwd
       - name: No Jekyll
         run: touch ./public/.nojekyll
         
