--- a/_config.yml
+++ b/_config.yml
@@ -137,8 +137,12 @@ live2d:
     width: 150
     height: 300
   mobile:
-    show: true # 是否在移动设备上显示
+    show: false # 是否在移动设备上显示
     scale: 0.5 # 移动设备上的缩放
   react:
     opacityDefault: 0.7
     opacityOnHover: 0.8
+
+# 自动生成sitemap
+sitemap:
+  path: sitemap.xml
