--- a/themes/butterfly/_config.yml
+++ b/themes/butterfly/_config.yml
@@ -3,7 +3,7 @@
 # --------------------------------------
 
 menu:
-  Home: / || fas fa-home
+  Home: https://yethyuan.github.io/ || fas fa-home
   Archives: /archives/ || fas fa-archive
   Tags: /tags/ || fas fa-tags
   Categories: /categories/ || fas fa-folder-open
@@ -11,7 +11,7 @@ menu:
     Music: /music/ || fas fa-music
     Movie: /movies/ || fas fa-video
   Link: /link/ || fas fa-link
-  About: https://yethyuan.github.io/ || fas fa-heart
+  About: https://yethyuan.github.io/#about || fas fa-heart
 
 # Code Blocks (代碼相關)
 # --------------------------------------
