--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Ethan's Notebook
-subtitle: 'Here I explore my computer'
+title: Ye Yuan (Ethan) Blog - Software Development Engineer
+subtitle: 'Backend, Fullstack, Cloud Natives, Edge Computing'
 description: 'A record of learnings in CS'
-keywords: Machine Learning, Blog, Ye Yuan, HUST, UCSB
+keywords: Ye Yuan, HUST, UCSB, Huazhong University of Science and Technology, University of California Santa Barbara, SDE, Software Development Engineer
 author: Ye Yuan
 language: en
 timezone: ''
