--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Ye Yuan (Ethan) Blog - Software Development Engineer
-subtitle: 'Backend, Fullstack, Cloud Natives, Edge Computing'
+title: Ye Yuan's Blog
+subtitle: 'Software Development Engineer, Backend, Fullstack, Cloud Natives, Edge Computing'
 description: 'A record of learnings in CS'
 keywords: Ye Yuan, HUST, UCSB, Huazhong University of Science and Technology, University of California Santa Barbara, SDE, Software Development Engineer
 author: Ye Yuan
