--- a/themes/butterfly/_config.yml
+++ b/themes/butterfly/_config.yml
@@ -11,7 +11,7 @@ menu:
     Music: /music/ || fas fa-music
     Movie: /movies/ || fas fa-video
   Link: /link/ || fas fa-link
-  About: https://yethyuan.github.io/#about || fas fa-heart
+  About: https://yethyuan.github.io/#about || fa-solid fa-user
 
 # Code Blocks (代碼相關)
 # --------------------------------------
@@ -154,7 +154,7 @@ post_meta:
     date_type: created # created or updated or both 主頁文章日期是創建日或者更新日或都顯示
     date_format: date # date/relative 顯示日期還是相對日期
     categories: true # true or false 主頁是否顯示分類
-    tags: false # true or false 主頁是否顯示標籤
+    tags: true # true or false 主頁是否顯示標籤
     label: true # true or false 顯示描述性文字
   post:
     date_type: both # created or updated or both 文章頁日期是創建日或者更新日或都顯示
@@ -177,7 +177,7 @@ wordcount:
 # 3: auto_excerpt (default)
 # false: do not show the article introduction
 index_post_content:
-  method: 3
+  method: 2
   length: 500 # if you set method to 2 or 3, the length need to config
 
 # anchor
@@ -263,7 +263,7 @@ addThis:
 # https://github.com/overtrue/share.js
 sharejs:
   enable: true
-  sites: facebook,twitter,wechat,weibo,qq
+  sites: facebook,twitter,wechat,weibo,qq,google
 
 # AddToAny
 # https://www.addtoany.com/
@@ -613,9 +613,9 @@ display_mode: dark
 # Beautify (美化頁面顯示)
 beautify:
   enable: true
-  field: post # site/post
-  title-prefix-icon: # '\f0c1'
-  title-prefix-icon-color: # '#F47466'
+  field: site # site/post
+  title-prefix-icon: '\f0c1' # '\f0c1'
+  title-prefix-icon-color: '#F47466' # '#F47466'
 
 # Global font settings
 # Don't modify the following settings unless you know how they work (非必要不要修改)
@@ -654,9 +654,21 @@ subtitle:
   # source: 2  調用一句網（簡體） http://yijuzhan.com/
   # source: 3  調用今日詩詞（簡體） https://www.jinrishici.com/
   # subtitle 會先顯示 source , 再顯示 sub 的內容
-  source: 3
+  source: false
   # 如果關閉打字效果，subtitle 只會顯示 sub 的第一行文字
   sub:
+    - Crescat scientia vita excolatur
+    - Sidere mens eadem mutato
+    - 繁星纵变，智慧永恒
+    - Rerum cognoscere causas
+    - Hinc itur ad astra
+    - 我们从这里走向繁星
+    - Lux sit
+    - Suos cultores scientia coronat
+    - Scientia vincere tenebras
+    - Concordia cum veritate
+    - Vacate et scire
+    - 慎思博学
 
 # Loading Animation (加載動畫)
 preloader:
@@ -770,7 +782,7 @@ darkmode:
   # autoChangeMode: 1  Following System Settings, if the system doesn't support dark mode, it will switch dark mode between 6 pm to 6 am
   # autoChangeMode: 2  Switch dark mode between 6 pm to 6 am
   # autoChangeMode: false
-  autoChangeMode: false
+  autoChangeMode: 1
 
 # Don't modify the following settings unless you know how they work (非必要請不要修改 )
 # Choose: readmode,translate,darkmode,hideAside,toc,chat,comment
@@ -801,7 +813,7 @@ mermaid:
   enable: true
   # built-in themes: default/forest/dark/neutral
   theme:
-    # light: default
+    light: default
     dark: dark
 
 # Note (Bootstrap Callout)
@@ -840,10 +852,10 @@ aplayerInject:
 # position 彈窗位置
 # 可選 top-left / top-center / top-right / bottom-left / bottom-center / bottom-right
 snackbar:
-  enable: false
+  enable: true
   position: bottom-left
   bg_light: '#49b1f5' # The background color of Toast Notification in light mode
-  bg_dark: '#1f1f1f' # The background color of Toast Notification in dark mode
+  bg_dark: '#2d3035' # The background color of Toast Notification in dark mode
 
 # https://instant.page/
 # prefetch (預加載)
