--- a/themes/butterfly/_config.yml
+++ b/themes/butterfly/_config.yml
@@ -3,7 +3,7 @@
 # --------------------------------------
 
 menu:
-  Home: https://yethyuan.github.io/ || fas fa-home
+  Home: https://yeyuan.pro/ || fas fa-home
   Archives: /archives/ || fas fa-archive
   Tags: /tags/ || fas fa-tags
   Categories: /categories/ || fas fa-folder-open
@@ -11,7 +11,7 @@ menu:
     Music: /music/ || fas fa-music
     Movie: /movies/ || fas fa-video
   Link: /link/ || fas fa-link
-  About: https://yethyuan.github.io/#about || fa-solid fa-user
+  About: https://yeyuan.pro/#about || fa-solid fa-user
 
 # Code Blocks (代碼相關)
 # --------------------------------------
@@ -35,7 +35,7 @@ copy:
 # formal:
 #   icon: link || the description
 social:
-  fa-solid fa-house-chimney: https://yethyuan.github.io/ || Home
+  fa-solid fa-house-chimney: https://yeyuan.pro/ || Home
   # fab fa-github: https://github.com/YEthYuan || Github
   fas fa-envelope: mailto:maxwell.yuanyeh@gmail.com || Email
   fa-solid fa-graduation-cap: https://scholar.google.com/citations?hl=en&user=HjmRtpQAAAAJ || Google Scholar
