--- a/themes/butterfly/_config.yml
+++ b/themes/butterfly/_config.yml
@@ -35,7 +35,7 @@ copy:
 # formal:
 #   icon: link || the description
 social:
-  fa-solid fa-house-chimney: https://yeyuan.pro/ || Home
+  fa-solid fa-house-chimney: / || Home
   # fab fa-github: https://github.com/YEthYuan || Github
   fas fa-envelope: mailto:maxwell.yuanyeh@gmail.com || Email
   fa-solid fa-graduation-cap: https://scholar.google.com/citations?hl=en&user=HjmRtpQAAAAJ || Google Scholar
@@ -457,7 +457,7 @@ baidu_analytics:
 
 # Google Analytics
 # https://analytics.google.com/analytics/web/
-google_analytics:
+google_analytics: G-KTYXD67M5V
 
 # CNZZ Analytics
 # https://www.umeng.com/
